<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_day1"
              android:icon="@android:drawable/ic_menu_camera"
              android:title="@string/day1" />

        <item android:id="@+id/nav_day2"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day2" />
        <item android:id="@+id/nav_day3"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day3" />
        <item android:id="@+id/nav_day4"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day4" />
        <item android:id="@+id/nav_day5"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day5" />
        <item android:id="@+id/nav_day6"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day6" />
        <item android:id="@+id/nav_day7"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/day7" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>